# kodegend

./: .gitignore  Cargo.toml  README.md  build.rs  helper.entitlements
configs/: autoconfig.toml
examples/: registry.env
src/: cli.rs  cli_output.rs  config.rs  control.rs  daemon.rs  lib.rs  lifecycle.rs  main.rs  manager.rs  service.rs  state_machine.rs
src/control/: linux_control.rs  macos_control.rs  windows_control.rs
src/install/: binaries.rs  binary_staging.rs  chromium.rs  cli.rs  config.rs  detection.rs  environment.rs  main.rs  mod.rs  orchestration.rs  privilege.rs  runners.rs  wizard.rs
src/install/download/: core.rs  extract.rs  github.rs  mod.rs  platform.rs
src/install/gui/: mod.rs  panels.rs  runner.rs  types.rs  window.rs
src/install/install/: builder.rs  fluent_voice.rs  mod.rs  uninstall.rs
src/install/install/config/: certificates.rs  hosts.rs  installer.rs  mod.rs  services.rs  toolchain.rs
src/install/install/core/: async_task.rs  certificate.rs  context.rs  mod.rs  progress.rs  service.rs
src/install/install/linux/: dropin.rs  file_ops.rs  helper.rs  journal.rs  mod.rs  privileges.rs  service_control.rs  services.rs  unit.rs
src/install/install/macos/: executor.rs  helper.rs  mod.rs  plist.rs
src/install/install/windows/: handles.rs  mod.rs  privileges.rs  registry.rs  service_creation.rs  utils.rs
src/security/: audit.rs  mod.rs  shell_executor.rs
src/service/: autoconfig.rs  embedded_servers.rs  kodegen_http.rs
